--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <title>Mission to Mars</title>
     <link 
       rel="stylesheet" 
-      ref="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
   </head>
   <body>
