--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,9 @@
     <div class="container">
       <!-- Add Jumbotron to Header -->
       <div class="jumbotron text-center">
-        <h1>Mission to Mars</h1>
+        <h1 style="color:orangered">Mission to Mars</h1>
         <!-- Add a button to activate scraping script -->
-        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+        <p><a class="btn btn-warning btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
       </div>
 
       <!-- Add section for Mars News -->
@@ -24,9 +24,9 @@
         <div class="col-md-12">
           <div class="media">
             <div class="media-body">
-              <h2>Latest Mars News</h2>
+              <h2><u><strong>Latest Mars News:</strong></u></h2>
               <h4 class="media-heading">{{ mars.news_title }}</h4>
-              <p>{{ mars.news_paragraph }}</p>
+              <p><em>{{ mars.news_paragraph }}</em></p>
             </div>
           </div>
         </div>
@@ -35,7 +35,7 @@
       <!-- Section for Featured Image and Facts table -->
       <div class="row" id="mars-featured-image">
         <div class="col-md-8">
-          <h2>Featured Mars Image</h2>
+          <h2><u><strong>Featured Mars Image:</u></strong></h2>
 
           <!-- if images is False/None/non-existent, then default to error message -->
           <img
@@ -48,7 +48,7 @@
         <div class="col-md-4">
           <!-- Mars Facts -->
           <div class="row" id="mars-facts">
-            <h4>Mars Facts</h4>
+            <h4><u><strong>Mars Facts:</strong></u></h4>
             {{ mars.facts | safe }}
           </div>
         </div>
@@ -57,7 +57,7 @@
       <!-- Section for Mars Hemispheres -->
       <div class="row" id="mars-hemispheres">
         <div class="page-header">
-          <h2 class="text-center">Mars Hemispheres</h2>
+          <h2 class="text-center"><u>Mars Hemispheres</u></h2>
         </div>
 
         {% for hemisphere in mars.hemispheres %}
